# stringcast

./: .gitignore  Cargo.toml  README.md  RUNNING.md  SPEC.md  entities.json  setup_listener.sh  wayland_README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-builds.yml
docs/: MACOS_APP.md  RELEASES.md  WAYLAND_POC.md
packaging/macos/: Info.plist  Stringcast  StringcastMenu.swift  build_app.sh  build_dmg.sh
scripts/: wayland_listener.env.example  wayland_listener.py
src/: lib.rs  main.rs  orchestrator.rs  pipeline.rs  runtime.rs
src/api/: client.rs  key_pool.rs  mod.rs  prompt.rs  providers.rs  response_cleaner.rs  transport.rs
src/clipboard/: mod.rs
src/commands/: mod.rs  registry.rs
src/detection/: engine.rs  mod.rs
src/extraction/: mod.rs
src/input/: buffer.rs  controller.rs  events.rs  guard.rs  hook.rs  mod.rs  rdev_hook.rs  simulator.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/replacement/: mod.rs
src/storage/: config.rs  keystore.rs  mod.rs  paths.rs
systemd/: stringcast-wayland-listener.service
udev/: 99-stringcast-input.rules
