[package]
name = "stringcast"
version = "0.1.0"
edition = "2021"
description = "System-wide AI text transformation desktop app"
license = "MIT"

[lib]
name = "stringcast"
path = "src/lib.rs"

[[bin]]
name = "stringcast"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
arboard = "3"
enigo = "0.2"
rdev = "0.5"
directories = "5"
keyring = "2"
evdev = { version = "0.13", default-features = false }
uinput = "0.1"
xkbcommon = "0.9"
